--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest --coverage",
-    "test:watch": "jest --coverage --watch" 
+    "test:watch": "jest --coverage --watch",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -25,11 +26,20 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.4",
+    "@angular-eslint/builder": "14.0.0",
+    "@angular-eslint/eslint-plugin": "14.0.0",
+    "@angular-eslint/eslint-plugin-template": "14.0.0",
+    "@angular-eslint/schematics": "14.0.0",
+    "@angular-eslint/template-parser": "14.0.0",
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jest": "^29.5.3",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
+    "eslint": "^8.18.0",
     "jest": "^29.6.2",
     "jest-preset-angular": "^13.1.1",
+    "prettier": "^3.0.0",
     "typescript": "~4.7.2"
   }
 }
