--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
     "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.2",
     "jest-preset-angular": "^13.1.1",
     "prettier": "^3.0.0",
+    "prettier-eslint": "^15.0.1",
     "typescript": "~4.7.2"
   }
 }
