--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: install
     steps:
-      - run: npm run build
+      - run: npm run build:ci
 
   test:
     runs-on: ubuntu-latest
