--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,16 +28,19 @@ jobs:
     needs: install
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: npm run build:ci
 
   test:
     needs: install
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: npm run test
   
   lint:
     needs: install
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: npm run lint
