--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngrx/effects": "^14.3.3",
+    "@ngrx/store": "^14.3.3",
+    "@ngrx/store-devtools": "^14.3.3",
     "bootstrap": "^5.3.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -35,6 +38,7 @@
     "@angular-eslint/template-parser": "14.0.0",
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "^14.2.0",
+    "@ngrx/eslint-plugin": "^14.3.3",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
