Created store favs logic

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,9 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "no-console":"warn",
+        "no-debugger":"error"
       }
     },
     {
