--- a/.github/workflows/build-package.js.yml
+++ b/.github/workflows/build-package.js.yml
@@ -12,17 +12,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18.x
         cache: 'npm'
     - run: npm ci
     - run: npm run build:ci
@@ -30,8 +25,3 @@ jobs:
       run: |
         cd dist/
         zip -r production.zip .
-    - name: Deploy production build
-      uses: actions/upload-artifact@v2
-      with:
-        name: production.zip
-        path: dist/production.zip
