--- a/.github/workflows/build-package.js.yml
+++ b/.github/workflows/build-package.js.yml
@@ -30,3 +30,8 @@ jobs:
       with:
           name: production.zip
           path: dist/production.zip
+    - name: Give status check
+      uses: actions/github-check@v2
+      with:
+        status: success
+        message: "Build successful"
