--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,8 @@
           }
         ],
         "no-console":"warn",
-        "no-debugger":"error"
+        "no-debugger":"error",
+        "no-unused-vars":"error"
       }
     },
     {
