--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "lint:fix": "ng lint --fix"
   },
   "private": true,
   "dependencies": {
